Configure nginx and docker to containerization

--- a/Backend/src/main/resources/application-dev.yml
+++ b/Backend/src/main/resources/application-dev.yml
@@ -15,18 +15,21 @@ spring:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   mail:
-    host: localhost
-    port: 1025
+    host: smtp.gmail.com
+    port: 465
+    username: ahmedwakil545@gmail.com
+    password: fzamixestbbklsmp
     properties:
       mail:
         smtp:
-          trust: "*"
-        auth: false
+          auth: true
+          ssl:
+            enable: true
+            trust: "*"
         starttls:
-          enable: false
-        connectiontimeout: 5000
-        timeout: 3000
-        writetimeout: 5000
+          enable: true
+    protocol: smtp
+
 
 application:
   security:
