implemented ci/cd pipeline for build and deploy

--- a/Backend/src/main/resources/application-dev.yml
+++ b/Backend/src/main/resources/application-dev.yml
@@ -15,10 +15,10 @@ spring:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   mail:
-    host: smtp.gmail.com
+    host: ${EMAIL_HOST_NAME}
     port: 465
-    username: ahmedwakil545@gmail.com
-    password: ${SMTP_PASSWORD}
+    username: ${EMAIL_USER_NAME}
+    password: ${EMAIL_PASSWORD}
     properties:
       mail:
         smtp:
@@ -39,6 +39,9 @@ application:
   mailing:
     frontend:
       activation-url: http://localhost:4200/activate-account
+
+  cors:
+    origins: http://localhost:4200, http://localhost:8080, http://51.20.174.248:8080, http://51.20.174.248:80
   file:
     upload:
       photos-output-path: ./uploads
