--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -13,7 +13,7 @@ FROM amazoncorretto:17
 #define few things
 
 ARG PROFILE=dev
-ARG APP_VERSION=1.0.2
+ARG APP_VERSION=1.0.0
 
 WORKDIR /app
 COPY --from=build /build/target/demo-*.jar /app/
@@ -24,5 +24,8 @@ EXPOSE 8088
 ENV DV_URL=jdbc:postgresql://postgres-sql-bsn:5432/book_social_network
 ENV ACTIVE_PROFILE=${PROFILE}
 ENV JAR_VERSION=${APP_VERSION}
+ENV EMAIL_HOST_NAME = missing
+ENV EMAIL_USER_NAME = missing
+ENV EMAIL_PASSWORD = missing
 
 CMD java -jar -Dspring.profiles.active=${ACTIVE_PROFILE} -Dspring.datasource.url=${DV_URL} demo-${JAR_VERSION}.jar
