--- a/.github/workflows/pipeline-backend.yml
+++ b/.github/workflows/pipeline-backend.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Build Backend
         run: |
           cd Backend
-          ./mvnw clean package
+          ./mvnw clean package -DskipTests
 
   build-image:
     runs-on: ubuntu-22.04
