--- a/.github/workflows/pipeline-backend.yml
+++ b/.github/workflows/pipeline-backend.yml
@@ -129,11 +129,13 @@ jobs:
           push: true
           platforms: linux/amd64
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/bsn-api:${{ steps.extract_version.outputs.VERSION }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/bsn-api:latest
+            ${{ env.DOCKER_USERNAME }}/bsn-api:${{ steps.extract_version.outputs.VERSION }}
+            ${{ env.DOCKER_USERNAME }}/bsn-api:latest
           build-args: |
             PROFILE=dev
-            APP_VERSION: ${{steps.extract_version.outputs.VERSION}}
+            APP_VERSION=${{ steps.extract_version.outputs.VERSION }}
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
 
 
   deploy:
