--- a/.github/workflows/pipeline-backend.yml
+++ b/.github/workflows/pipeline-backend.yml
@@ -121,11 +121,11 @@ jobs:
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
 
-      - name: Set Docker tags
-        id: docker_tags
-        run: |
-          echo "TAG1=${{ secrets.DOCKERHUB_USERNAME }}/bsn-api:${{ steps.extract_version.outputs.VERSION }}" >> $GITHUB_OUTPUT
-          echo "TAG2=${{ secrets.DOCKERHUB_USERNAME }}/bsn-api:latest" >> $GITHUB_OUTPUT
+#      - name: Set Docker tags
+#        id: docker_tags
+#        run: |
+#          echo "TAG1=${{ secrets.DOCKERHUB_USERNAME }}/bsn-api:${{ steps.extract_version.outputs.VERSION }}" >> $GITHUB_OUTPUT
+#          echo "TAG2=${{ secrets.DOCKERHUB_USERNAME }}/bsn-api:latest" >> $GITHUB_OUTPUT
 
       - name: Build and push to Docker Hub
         uses: docker/build-push-action@v5
@@ -135,8 +135,8 @@ jobs:
           push: true
           platforms: linux/amd64
           tags: |
-            ${{ steps.docker_tags.outputs.TAG1 }}
-            ${{ steps.docker_tags.outputs.TAG2 }}
+            wakil026/bsn-api:${{ steps.extract_version.outputs.VERSION }}
+            wakil026/bsn-api:latest
           build-args: |
             PROFILE=dev
             APP_VERSION=${{ steps.extract_version.outputs.VERSION }}
