fix create folder creation4

--- a/.github/workflows/pipeline-backend.yml
+++ b/.github/workflows/pipeline-backend.yml
@@ -191,14 +191,11 @@ jobs:
 #          ssh -o ConnectTimeout=10 -o StrictHostKeyChecking=no ${{ secrets.VPS_USERNAME }}@${{ secrets.VPS_IP }} "echo SSH connection successful"
 
       - name: Create deployment folder
-        run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USERNAME }}@${{ secrets.VPS_IP }}
-          mkdir -p ci-cd
+        run: ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USERNAME }}@${{ secrets.VPS_IP }} mkdir -p ci-cd
       
 
       - name: Copy docker-compose file
-        run: |
-          scp -o StrictHostKeyChecking=no docker-compose.yml ${{ secrets.VPS_USERNAME }}@${{ secrets.VPS_IP }}:ci-cd/
+        run: scp -o StrictHostKeyChecking=no docker-compose.yml ${{ secrets.VPS_USERNAME }}@${{ secrets.VPS_IP }}:ci-cd/
 
       - name: Set ENV variable and deploy
         run: |
