--- a/.github/workflows/pipeline-backend.yml
+++ b/.github/workflows/pipeline-backend.yml
@@ -191,7 +191,10 @@ jobs:
 #          ssh -o ConnectTimeout=10 -o StrictHostKeyChecking=no ${{ secrets.VPS_USERNAME }}@${{ secrets.VPS_IP }} "echo SSH connection successful"
 
       - name: Create deployment folder
-        run: ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USERNAME }}@${{ secrets.VPS_IP }} mkdir -p ~/ci-cd
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USERNAME }}@${{ secrets.VPS_IP }} <<EOF
+          mkdir -p ~/ci-cd
+          EOF
 
       - name: Debug - Check local file
         run: |
@@ -199,7 +202,6 @@ jobs:
           ls -la docker-compose.yml
           echo "First few lines:"
           head -3 docker-compose.yml
-
 
       - name: Copy docker-compose file
         run: |
