--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,15 +32,15 @@ services:
     depends_on:
       - postgres
 
-#  bsn-ui:
-#    container_name: bsn-ui
-#    image: bsn/bsn-ui:1.0.0
-#    ports:
-#      - 4200:80
-#    networks:
-#      - spring-demo
-#    depends_on:
-#      - bsn-api
+  bsn-ui:
+    container_name: bsn-ui
+    image: wakil026/bsn-ui:latest
+    ports:
+      - 4200:80
+    networks:
+      - spring-demo
+    depends_on:
+      - bsn-api
 
 networks:
   spring-demo:
