--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,10 @@ services:
     image: wakil026/bsn-api:latest
     ports:
       - 8088:8088
+    environment:
+      - EMAIL_HOST_NAME=${EMAIL_HOST_NAME}
+      - EMAIL_USER_NAME=${EMAIL_USER_NAME}
+      - EMAIL_PASSWORD=${EMAIL_PASSWORD}
     networks:
       - spring-demo
     depends_on:
